virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mtls-test
spec:
  hosts:
  - '*'
  gateways:
  - mtls-gateway
  http:
  - route:
    - destination:
        host: spring-boot-helloworld
